@@ -15,7 +15,6 @@ import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 import org.hl7.fhir.instance.model.api.IBase;
 import org.hl7.fhir.instance.model.api.IBaseBackboneElement;
 import org.hl7.fhir.instance.model.api.IBaseBundle;
@@ -317,7 +316,7 @@ public class TestQuestionnaire {
         public GeneratedQuestionnaire itemHasInitial(String theLinkId) {
             var matchingItems = items.stream()
                     .filter(i -> request.getItemLinkId(i).equals(theLinkId))
-                    .collect(Collectors.toList());
+                    .toList();
             for (var item : matchingItems) {
                 assertFalse(request.resolvePathList(item, "initial").isEmpty());
             }
@@ -388,7 +387,7 @@ public class TestQuestionnaire {
         public GeneratedQuestionnaireResponse itemHasAnswerValue(String linkId, IBase value) {
             var answer = request.resolvePathList(items.get(linkId), "answer", IBase.class);
             var answers =
-                    answer.stream().map(a -> request.resolvePath(a, "value")).collect(Collectors.toList());
+                    answer.stream().map(a -> request.resolvePath(a, "value")).toList();
             assertNotNull(answers);
             if (value instanceof IPrimitiveType) {
                 assertTrue(
